# VEK-Launcher

./: .env.example  .env.production  .gitignore  Cargo.toml  README.md  components.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1716494899812-ffee6d65a5a8e.mjs
src/: Settings.tsx  SplashScreen.tsx  constants.ts  data-source.ts  main.tsx  splash.tsx
src-tauri/: Cargo.toml  downloaded.torrent  games.db  get_api_key.py  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app_modules/: mod.rs
src-tauri/src/app_modules/database/: mod.rs
src-tauri/src/app_modules/file/: mod.rs
src-tauri/src/app_modules/formatters/: mod.rs
src-tauri/src/app_modules/gamedata/: mod.rs
src-tauri/src/app_modules/helpers/: mod.rs
src-tauri/src/app_modules/provider_0xempress/: mod.rs
src-tauri/src/app_modules/provider_dodi/: mod.rs
src-tauri/src/app_modules/provider_fitgirl/: mod.rs
src-tauri/src/app_modules/provider_gog/: mod.rs
src-tauri/src/app_modules/provider_kaoskrew/: mod.rs
src-tauri/src/app_modules/provider_onlinefix/: mod.rs
src-tauri/src/app_modules/provider_tinyrepacks/: mod.rs
src-tauri/src/app_modules/provider_xatab/: mod.rs
src-tauri/src/app_modules/torrent_service/: mod.rs
src/components/: App.tsx  errorBoundary.js
src/components/Layouts/Header/: index.tsx  styles.ts
src/components/Layouts/LeftMenuBar/: index.tsx  styles.ts
src/components/Misc/AppBorders/: styles.ts
src/components/Misc/Props/: styled.ts
src/components/Navigation/Modals/: index.tsx  styles.ts
src/components/Navigation/Modals/pages/Game/: index.tsx  styles.ts
src/components/Navigation/Modals/pages/Search/: index.tsx  styles.ts
src/components/Navigation/Pagination/: index.tsx  styles.ts
src/components/Navigation/Pagination/pages/About/: index.tsx  styles.ts
src/components/Navigation/Pagination/pages/Catalog/: index.tsx
src/components/Navigation/Pagination/pages/Home/: index.tsx  styles.ts
src/components/Navigation/Pagination/pages/Settings/: index.tsx
src/components/UIElements/Buttons/IconRoundedButton/: styles.ts
src/components/UIElements/Buttons/TextRoundedButton/: index.tsx  styles.ts
src/components/UIElements/Carousel/: index.tsx
src/components/UIElements/Icons/SvgIcon/: index.tsx
src/components/UIElements/Inputs/InputText/: index.tsx
src/components/UIElements/games/GameCard/: index.tsx  styles.ts
src/components/shadcn-ui/ui/: carousel.tsx  input.tsx
src/entity/: game.entity.ts  index.ts
src/migrations/: 1716747583764-GameMigration.ts  index.ts
src/pages/: index.html
src/services/: fileService.ts  gameService.ts  torrent-parser.worker.js
src/services/databaseService/: index.ts
src/services/gameService/: gameService.ts
src/services/torrentProvidersService/: BaseTorrentProvider.ts  ITorrentProvider.ts  formatters.ts  helpers.ts
src/services/torrentProvidersService/torrentProviders/: Provider0xEMPRESS.ts  Provider1337x.ts  ProviderDODI.ts  ProviderFitGirl.ts  ProviderGOG.ts  ProviderKaOsKrew.ts  ProviderOnlineFix.ts  ProviderTinyRepacks.ts  ProviderXatab.ts
src/services/torrentService/: torrent-parser.worker.js  torrentService.ts
src/store/: index.ts
src/store/actionCreators/: fileActionCreators.ts  files.ts  games.ts  torrents.ts
src/store/reducers/: fileReducer.ts  filesReducer.ts  gamesReducer.ts  index.ts  torrentsReducer.ts
src/store/sagas/: fileSagas.ts  index.ts  torrentSagas.ts
src/styles/: global.ts  styled.d.ts
src/styles/themes/: dark.ts  light.ts
src/types/: actions.ts  files.ts  games.ts  index.ts  store.ts  torrents.ts
src/utils/: userTemporaryState.ts
