[package]
name = "VEK-Launcher"
version = "1.0.0"
description = "Launcher for pirate games"
authors = ["Emil Markov"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.6.6", features = ["macos-private-api", "os-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-title", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
settimeout = "0.1.2"
window-shadows = "0.2.2"
chrono = "0.4.38"
once_cell = "1.19.0"
dirs = "5.0.1"
sysinfo = "0.30.12"
lazy_static = "1.4.0"
devtools = "0.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
