[package]
name = "VEK-Launcher"
version = "0.0.1"
description = "Launcher for pirate games"
authors = ["Emil Markov"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.7", features = [ "macos-private-api", "os-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-title", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
settimeout = "0.1.2"
window-shadows = "0.2.2"
chrono = "0.4.38"
once_cell = "1.19.0"
dirs = "5.0.1"
sysinfo = "0.30.12"
lazy_static = "1.4.0"
devtools = "0.3.1"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
futures-timer = "3.0.3"
bytes = "1.6.0"
uuid = "1.8.0"
tokio = { version = "1.0.0", features = ["full"] }
thiserror = "1.0.61"
regex = "1.10.4"
dotenv = "0.15.0"
scraper = "0.19.0"
hex = "0.4.3"
url = "2.5.0"
futures = "0.3.30"
fake_user_agent = "0.2.1"
base64 = "0.22.1"
bencode = "0.1.16"
reqwest_cookie_store = "0.8.0"
rs_torrent_magnet = "0.2.0"
reqwest-middleware = "0.3.1"
diqwest = "3.0.0"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
